templates/python_template.yaml
---
# Source: python/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-python
  labels:
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: python-2.0.2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: release-name
---
# Source: python/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-python
  labels:
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: python-2.0.2
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: python
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python
        app.kubernetes.io/instance: release-name
      annotations:
        deployment: "blue"
        pipeline: "helm"
    spec:
      containers:
        - name: python
          image: "jcdemo/flaskapp:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
---
# Source: python/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-python
  labels:
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: python-2.0.2
spec:
  rules:
    - host: chart-example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-python
              servicePort: http
